--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "media-api",
+  "name": "strapi-plugin-media-api",
   "version": "0.0.0",
   "description": "This is the description of the plugin.",
   "strapi": {
